--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "firebase": "^9.16.0",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
